bynkc/tests/fixtures/positive/178_consume_braced_bare_names/src/auth/sessions.bynk
context auth.sessions

consumes tokens { Jwt }

service login {
  on call(secret: String) -> Effect[String] given Jwt {
    let token <- Jwt.sign("u1", secret)
    token
  }
}
