bynkc/tests/fixtures/negative/142_consume_capability_clash/src/app/svc.bynk
context app.svc

consumes tokens { Jwt }

capability Jwt {
  fn sign(sub: String, secret: String) -> Effect[String]
}
